<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/sign_in" />
            <LinearLayout android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="horizontal" >
            	
            	<View android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                 android:layout_weight="3"/>
            	
	            <ImageView
	                android:id="@+id/imageView1"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_horizontal"
	                android:src="@drawable/spotify_logo"
	                android:contentDescription="@string/spotifyLogoDesc"
	                android:adjustViewBounds="true"
	                android:paddingTop="30dp"
	                android:paddingBottom="20dp"
	                android:layout_weight="5" />
	            
	            <View android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                 android:layout_weight="3"/>
	            
            </LinearLayout>
            
        </LinearLayout>

        
    </ScrollView>

</merge>